fixed containers size overlapping

--- a/css/galery.css
+++ b/css/galery.css
@@ -25,7 +25,7 @@ figure {
 
 figcapture a {
     text-decoration: none;
-    font-size: large;
+    /* font-size: large; */
     font-variant: small-caps;
     color: black;
 }
