--- a/css/resistor.css
+++ b/css/resistor.css
@@ -6,10 +6,11 @@
     padding: 0;
     justify-content: start;
     align-content: center;
-    width: 300px;
+    width: 250px;
     height: 150px;
     background-color: rgb(94, 121, 5);
     align-items: center;
+    /* height: fit-content; */
 }
 
 fieldset {
@@ -22,7 +23,7 @@ fieldset {
 }
 
 #resistorContainer input {
-    /* font-size: 1rem; */
+    font-size: 1rem;
 }
 
 .radioPieces {
@@ -37,8 +38,13 @@ figure {
     flex-direction: column;
 }
 
+figcupture {
+    padding: 0;
+}
+
 #but {
     position: absolute;
+    margin: 10px 0 0px 10px;
 }
 
 #calcResult {
@@ -46,25 +52,28 @@ figure {
 }
 
 .stripes {
-    width: 35px;
+    position: relative;
+    margin-top: 70px;
+    width: 25px;
     height: 50px;
     display: inline-block;
     background-color: rgb(98, 240, 211);
-    padding-block: ;
 }
 
 .readingContainer>input {
     margin-top: 40px;
-    width: 40px;
+    width: 35px;
     font-size: 16px;
 }
 
 #contact {
     /* align-items: baseline; */
-    width: 40px;
+    width: 35px;
+    margin: 65px 0 0 10px;
     height: 10px;
     /* position: absolute; */
     background-color: rgb(10, 152, 131);
+    box-shadow: 20 0 0 rgb(10, 152, 131);
 }
 
 
@@ -78,13 +87,14 @@ figure {
     padding: 0;
     justify-content: center;
     align-content: center;
-    width: 300px;
+    width: 250px;
     height: 150px;
     background-color: rgb(94, 121, 5);
     align-items: center;
 }
 
 .rectangle1 {
+    position: absolute;
     width: 50px;
     height: 5px;
     background-color: rgb(10, 152, 131);
@@ -109,7 +119,7 @@ figure {
     background-color: rgb(10, 152, 131);
     overflow: hidden;
     margin-right: 40px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .rectangle4 {
@@ -118,11 +128,21 @@ figure {
     height: 60px;
     background-color: rgb(10, 152, 131);
     margin-right: -38px;
-    margin-top: 8px;
+    margin-top: 6px;
     animation: bounce 0.5s;
     animation-direction: alternate;
     animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
     animation-iteration-count: infinite;
+}
+
+.diodContact {
+    position: absolute;
+    margin-right: 80px;
+    margin-bottom: px;
+    width: 30px;
+    height: 10px;
+    background-color: rgb(10, 152, 131);
+    box-shadow: 75px 0 0 rgb(10, 152, 131);
 }
 
 
@@ -135,7 +155,7 @@ figure {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 300px;
+    width: 250px;
     height: 150px;
     background-color: rgb(94, 121, 5);
     align-items: center;
@@ -244,7 +264,7 @@ figure {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 300px;
+    width: 250px;
     height: 150px;
     background-color: rgb(94, 121, 5);
     align-items: center;
@@ -283,7 +303,7 @@ figure {
     height: 20px;
     transform: rotate(90deg);
     position: absolute;
-    margin-top: 95px;
+    margin-top: 98px;
     margin-right: 70px;
     box-shadow: 0 -70px 0 white;
 }
@@ -294,9 +314,9 @@ figure {
     height: 25px;
     /* transform: rotate(90deg); */
     position: absolute;
-    margin-top: 115px;
+    margin-top: 118px;
     margin-right: 85px;
-    box-shadow: 90px 0 0 white;
+    box-shadow: 87px 0 0 white;
 }
 
 @keyframes ball {
